--- a/myprojects/CSS/Layouts/Case1/index.html
+++ b/myprojects/CSS/Layouts/Case1/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge" >
-  <meta name="viewport" content="width=device-width ,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width ,initial-scale=1.0">
 
     <title>Case 1</title>
-  <link rel="stylesheet" href="Assets/styleSheet.css">
+
+    <link rel="stylesheet" href="Assets/css/styleSheet.css">
 </head>
 <body>
   <sec>
