assignment case 4 complete

--- a/myprojects/CSS/Layouts/Case1/index.html
+++ b/myprojects/CSS/Layouts/Case1/index.html
@@ -7,7 +7,7 @@
 
     <title>Case 1</title>
 
-    <link rel="stylesheet" href="Assets/css/styleSheet.css">
+    <link rel="stylesheet" href="Assets/css/stylesheet.css">
 </head>
 <body>
   <sec>
