--- a/myprojects/CSS/Layouts/Case2/index.html
+++ b/myprojects/CSS/Layouts/Case2/index.html
@@ -7,8 +7,8 @@
 
     <title>Case 2</title>
 
-    <link rel="stylesheet" href="assets/css/styleSheet.css">
-    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="Assets/css/stylesheet.css">
+    <link rel="stylesheet" href="Assets/css/normalize.css">
 
 
 
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/image/ijselogo.png" alt="">
+        <img src="Assets/image/ijselogo.png" alt="">
         <ui>
             <li>Home</li>
             <li>Service</li>
