--- a/myprojects/CSS/Layouts/Case5/Assets/css/stylesheet.css
+++ b/myprojects/CSS/Layouts/Case5/Assets/css/stylesheet.css
@@ -9,31 +9,31 @@
     grid-template-columns: repeat(4, 1fr);
 }
 #one{
-    background-color: red;
+    background-color: #fe0000;
     border: 1px solid black;
 }
 #two{
-    background-color: green;
+    background-color: #008001;
     border: 1px solid black;
 }
 #three{
-    background-color: orange;
+    background-color: #ff4500;
     border: 1px solid black;
 }
 #four{
-    background-color: purple;
+    background-color: #81007f;
     border: 1px solid black;
 }
 #five{
-    background-color: deeppink;
+    background-color: #ff1494;
     border: 1px solid black;
 }
 #six{
-    background-color: blue;
+    background-color: #0000fe;
     border: 1px solid black;
 }
 #seven{
-    background-color: brown;
+    background-color: #a52b2a;
     border: 1px solid black;
 }
 #eight{
@@ -45,14 +45,14 @@
     border: 1px solid black;
 }
 #ten{
-    background-color: yellow;
+    background-color: #fed700;
     border: 1px solid black;
 }
 #eleven{
-    background-color: gray;
+    background-color: #609da0;
     border: 1px solid black;
 }
 #twelve{
-    background-color: aqua;
+    background-color: #00ffff;
     border: 1px solid black;
 }
