assignment case 5 complete

--- a/myprojects/CSS/Layouts/Case6/index.html
+++ b/myprojects/CSS/Layouts/Case6/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="wrapper">
-        <div id="one">one</div>
-        <div id="two">two</div>
-        <div id="three">three</div>
-        <div id="four">four</div>
-        <div id="five">five</div>
-        <div id="six">six</div>
-        <div id="seven">seven</div>
-        <div id="eight">eight</div>
+        <div id="one"></div>
+        <div id="two"></div>
+        <div id="three"></div>
+        <div id="four"></div>
+        <div id="five"></div>
+        <div id="six"></div>
+        <div id="seven"></div>
+        <div id="eight"></div>
     </div>
 </body>
 </html>
