--- a/myprojects/CSS/Layouts/Case6/Assets/css/stylesheet.css
+++ b/myprojects/CSS/Layouts/Case6/Assets/css/stylesheet.css
@@ -9,35 +9,42 @@
     grid-template-columns: repeat(4, 1fr);
 }
 #one{
-    background-color: red;
+    grid-column: 1/3;
+    grid-row: 1;
+    background-color: #fe0000;
     border: 1px solid black;
 }
 #two{
-    background-color: green;
+    grid-column:3 ;
+    grid-row: 1;
+    background-color: #008001;
     border: 1px solid black;
 }
 #three{
-    background-color: orange;
+    grid-column:4 ;
+    grid-row: 1/4;
+    background-color: #ff4500;
     border: 1px solid black;
 }
 #four{
-    background-color: purple;
+    background-color: #81007f;
     border: 1px solid black;
 }
 #five{
-    background-color: deeppink;
+    background-color: #ff1494;
     border: 1px solid black;
 }
 #six{
-    background-color: blue;
+    background-color: #0000fe;
     border: 1px solid black;
 }
 #seven{
-    background-color: brown;
+    background-color: #a52b2a;
     border: 1px solid black;
 }
 #eight{
-    background-color: #ee82ef ;
+    grid-column: 2/4;
+    grid-row: 3;
+    background-color: #4b0081 ;
     border: 1px solid black;
 }
-
