--- a/myprojects/CSS/Layouts/Case2/index.html
+++ b/myprojects/CSS/Layouts/Case2/index.html
@@ -12,23 +12,25 @@
 
 
 
-
 </head>
 <body>
     <header>
         <img src="Assets/image/ijselogo.png" alt="">
-        <ui>
+        <ul>
             <li>Home</li>
             <li>Service</li>
             <li>Contatc US</li>
             <li>About US</li>
-        </ui>
+        </ul>
     </header>
 
     <main>
         <nav>
             <ul>
-                <li><i class=""></i></li>
+                <li></i><a href="index.html">Home</a></li>
+                <li><a href="index.html">Service</a></li>
+                <li><a href="index.html">Contact Me</a></li>
+                <li><a href="index.html">About Me</a></li>
             </ul>
         </nav>
         <section>
