--- a/myprojects/CSS/Layouts/Case2/index.html
+++ b/myprojects/CSS/Layouts/Case2/index.html
@@ -27,7 +27,7 @@
     <main>
         <nav>
             <ul>
-                <li></i><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index.html">Service</a></li>
                 <li><a href="index.html">Contact Me</a></li>
                 <li><a href="index.html">About Me</a></li>
